js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-8-2.js
var
errObj
=
new
Error
(
)
;
errObj
.
name
=
"
"
;
if
(
errObj
.
name
!
=
=
"
"
)
{
ERROR
(
"
Expected
errObj
.
name
to
be
'
'
actually
"
+
errObj
.
name
)
;
}
if
(
errObj
.
toString
(
)
!
=
=
"
"
)
{
ERROR
(
"
Expected
errObj
.
toString
(
)
to
be
'
'
actually
"
+
errObj
.
toString
(
)
)
;
}
reportCompare
(
0
0
)
;
